--- a/modules/core/src/ru/iovchinnikov/yaap/app.properties
+++ b/modules/core/src/ru/iovchinnikov/yaap/app.properties
@@ -22,6 +22,9 @@ cuba.anonymousSessionId = fb4df675-fbe4-9f6a-9462-41a6a83182c7
 #                                  Other                                      #
 ###############################################################################
 
-cuba.webContextName = app-core
+cuba.webContextName = yaap-core
 cuba.availableLocales = English|en;Russian|ru
 cuba.localeSelectVisible = false
+cuba.restApiUrl = http://localhost:8088/yaap-portal/api
+cuba.webAppUrl = http://localhost:8088/yaap
+cuba.webPort = 8088
