--- a/modules/web/src/ru/iovchinnikov/yaap/web-app.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web-app.properties
@@ -29,7 +29,7 @@ cuba.creditsConfig = +
 ###############################################################################
 
 # Middleware connection
-cuba.connectionUrlList = http://localhost:8080/app-core
+cuba.connectionUrlList = http://localhost:8088/yaap-core
 
 # Set to false if the middleware works on different JVM
 cuba.useLocalServiceInvocation = true
@@ -37,6 +37,9 @@ cuba.useLocalServiceInvocation = true
 cuba.web.loginDialogDefaultUser = a
 cuba.web.loginDialogDefaultPassword = admin
 
-cuba.webContextName = app
+cuba.webContextName = yaap
 cuba.availableLocales = English|en;Russian|ru
-cuba.localeSelectVisible = true
+cuba.localeSelectVisible = false
+cuba.restApiUrl = http://localhost:8088/yaap-portal/api
+cuba.webAppUrl = http://localhost:8088/yaap
+cuba.webPort = 8088
