--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ buildscript {
     repositories {
         
         maven {
-            url 'https://repo.cuba-platform.com/content/groups/work'
+            url 'http://1.0.0.137:8010/nexus/content/groups/cuba-group/'
             credentials {
-                username(rootProject.hasProperty('repoUser') ? rootProject['repoUser'] : 'cuba')
-                password(rootProject.hasProperty('repoPass') ? rootProject['repoPass'] : 'cuba123')
+                username(rootProject.hasProperty('repoUser') ? rootProject['repoUser'] : 'admin')
+                password(rootProject.hasProperty('repoPass') ? rootProject['repoPass'] : 'admin123')
             }
         }
         
@@ -16,6 +16,7 @@ buildscript {
         classpath "com.haulmont.gradle:cuba-plugin:$cubaVersion"
     }
 }
+
 
 def modulePrefix = 'yaap'
 
