--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 
 }
 
-def hsql = 'org.hsqldb:hsqldb:2.2.9'
+def postgres = 'org.postgresql:postgresql:9.4.1212'
 
 configure([globalModule, coreModule, webModule]) {
     apply(plugin: 'java')
@@ -89,8 +89,8 @@ configure(coreModule) {
     dependencies {
         compile(globalModule)
         provided(servletApi)
-        jdbc(hsql)
-        testRuntime(hsql)
+        jdbc(postgres)
+        testRuntime(postgres)
 
     }
 
@@ -111,19 +111,19 @@ configure(coreModule) {
     }
 
     task createDb(dependsOn: assembleDbScripts, description: 'Creates local database', type: CubaDbCreation) {
-        dbms = 'hsql'
-        host = 'localhost'
+        dbms = 'postgres'
+        host = '10.0.1.10'
         dbName = 'yaap'
-        dbUser = 'sa'
-        dbPassword = ''
+        dbUser = 'pi'
+        dbPassword = 'ocrio1234321'
     }
 
     task updateDb(dependsOn: assembleDbScripts, description: 'Updates local database', type: CubaDbUpdate) {
-        dbms = 'hsql'
-        host = 'localhost'
+        dbms = 'postgres'
+        host = '10.0.1.10'
         dbName = 'yaap'
-        dbUser = 'sa'
-        dbPassword = ''
+        dbUser = 'pi'
+        dbPassword = 'ocrio1234321'
     }
 }
     
