--- a/modules/web/src/ru/iovchinnikov/yaap/web-app.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web-app.properties
@@ -34,8 +34,8 @@ cuba.connectionUrlList = http://localhost:8088/yaap-core
 # Set to false if the middleware works on different JVM
 cuba.useLocalServiceInvocation = true
 
-cuba.web.loginDialogDefaultUser = a
-cuba.web.loginDialogDefaultPassword = admin
+cuba.web.loginDialogDefaultUser = <disabled>
+cuba.web.loginDialogDefaultPassword = <disabled>
 
 cuba.webContextName = yaap
 cuba.availableLocales = English|en;Russian|ru
